Improve inlay hint logic to find and classify Kotlin light service classes